# zmq_rmsv2

./: Cargo.toml  build.rs  freeswitch-deploy-with-audio-fork-module.sh  install-rush.sh  mod_audio_fork.la  mod_audio_stream.la
proto/: audio_stream.proto
src/: client.rs  file_reader_stream.rs  main.rs  server.rs
