[package]
name = "zmq_rmsv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ws-server"
path = "src/server.rs"

[[bin]]
name = "rmsv2"
path = "src/client.rs"

[dependencies]
zmq = "0.10.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
base64 = "0.21.5"
futures-util = "0.3.30"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.21.0"
env_logger = "0.10.1"
url = "2.5.0"
futures-channel = "0.3.30"
